--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
+    "nanoid": "^4.0.0",
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
